[gd_scene load_steps=8 format=2]

[ext_resource path="res://Personajes/Ratas.gd" type="Script" id=1]
[ext_resource path="res://Destino Imagenes/ASSES/RATA2.png" type="Texture" id=2]
[ext_resource path="res://Destino Imagenes/ASSES/Rata_rest.png" type="Texture" id=3]
[ext_resource path="res://Destino Imagenes/ASSES/Rata.png" type="Texture" id=4]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "Quietas",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 4 ), ExtResource( 3 ) ],
"loop": true,
"name": "Ratas",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 27, 64.5 )

[sub_resource type="CircleShape2D" id=3]
radius = 336.341

[node name="Ratas" type="KinematicBody2D"]
collision_layer = 9
collision_mask = 9
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "Quietas"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -0.5 )
shape = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 3 )

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
